--- a/AWSTesting/buildspec.yml
+++ b/AWSTesting/buildspec.yml
@@ -5,10 +5,10 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Compiling the Python code...
-      - python /Scripts/PythonApp.py
+      - python HelloWorld_tst.py
   post_build:
     commands:
       - echo Build completed on `date`
 artifacts:
   files:
-    - PythonApp.py
+    - HelloWorld.py
